Refactored Project Structure + Used Java 25 Features + Added enhanced documentation