@@ -23,7 +23,7 @@ public class GetCommand implements ICommand {
             return ERR_WRONG_ARGS;
         }
 
-        String key = args.get(0);
+        String key = args.getFirst();
         String value = RedisDatabase.getInstance().get(key);
 
         if (value == null) {
